[api] update contract for domain methods; [domain] update stubs according to new contract
