# api/internal/api/domain/handler/create_source.go
@@ -8,18 +8,20 @@ import (
 )
 
 // CreateSource godoc
-// @Summary Create new source.
-// @Description Creates new domain source used for RAG vector search.
-// @Tags domain
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param req body pb.CreateSourceRequest true "Input data for creating source"
-// @Success 201 {object} pb.CreateSourceResponse "Source successfully created"
-// @Failure 400 {object} string "Failed to create source"
-// @Router /api/v1/domain/ [post]
+//
+//	@Summary		Create new sour
+//	@Summary		Create new source.
+//	@Description	Creates new domain source used for RAG vector search.
+//	@Tags			domain
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			req	body		pb.Source	true	"Input data for creating source"
+//	@Success		201	{object}	pb.Source	"Source successfully created"
+//	@Failure		400	{object}	string		"Failed to create source"
+//	@Router			/api/v1/domain/ [post]
 func (h *Handler) CreateSource(c *fiber.Ctx) error {
-	var req pb.CreateSourceRequest
+	var req pb.Source
 	if err := c.BodyParser(&req); err != nil {
 		return errs.WrapErr(shared.ErrInvalidBody, err.Error())
 	}
@@ -28,9 +30,9 @@ func (h *Handler) CreateSource(c *fiber.Ctx) error {
 	if !ok {
 		return errs.WrapErr(shared.ErrUnauthorized, "no user ID in context")
 	}
-	req.UserId = userID
+	ctx := pushUserID(c.UserContext(), userID)
 
-	resp, err := h.domainService.CreateSource(c.UserContext(), &req)
+	resp, err := h.domainService.CreateSource(ctx, &req)
 	if err != nil {
 		return errs.WrapErr(shared.ErrCreateSource, err.Error())
 	}
