# api/internal/api/domain/handler/list_sources.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"fmt"
+
 	"github.com/gofiber/fiber/v2"
 	"github.com/larek-tech/diploma/api/internal/domain/pb"
 	"github.com/larek-tech/diploma/api/internal/shared"
@@ -8,25 +10,36 @@ import (
 )
 
 // ListSources godoc
-// @Summary List sources.
-// @Description List sources to which user has access.
-// @Tags domain
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Success 200 {object} pb.ListSourcesResponse "List of sources"
-// @Failure 400 {object} string "Failed to list sources"
-// @Router /api/v1/domain/list [get]
+//
+//	@Summary		List sources.
+//	@Description	List sources to which user has access.
+//	@Tags			domain
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			offset	query		uint					true	"Pagination offset"
+//	@Param			limit	query		uint					true	"Pagination limit"
+//	@Success		200		{object}	pb.ListSourcesResponse	"List of sources"
+//	@Failure		400		{object}	string					"Failed to list sources"
+//	@Router			/api/v1/domain/list [get]
 func (h *Handler) ListSources(c *fiber.Ctx) error {
-	var req pb.ListSourcesRequest
+	offset := c.QueryInt(offsetParam, 0)
+	limit := c.QueryInt(limitParam, 10)
+	if offset < 0 || limit < 0 {
+		return errs.WrapErr(shared.ErrInvalidParams, fmt.Sprintf("offset=%d, limit=%d", offset, limit))
+	}
 
 	userID, ok := c.Locals(shared.UserIDKey).(int64)
 	if !ok {
 		return errs.WrapErr(shared.ErrUnauthorized, "no user ID in context")
 	}
-	req.UserId = userID
+	ctx := pushUserID(c.UserContext(), userID)
 
-	resp, err := h.domainService.ListSources(c.UserContext(), &req)
+	req := pb.ListSourcesRequest{
+		Offset: uint64(offset),
+		Limit:  uint64(limit),
+	}
+	resp, err := h.domainService.ListSources(ctx, &req)
 	if err != nil {
 		return errs.WrapErr(shared.ErrListSources, err.Error())
 	}
