# api/internal/api/domain/handler/update_source.go
@@ -8,16 +8,18 @@ import (
 )
 
 // UpdateSource godoc
-// @Summary Update source.
-// @Description Update source information or params for update job.
-// @Tags domain
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param req body pb.UpdateSourceRequest true "Update params"
-// @Success 204 {object} string "Source updated"
-// @Failure 400 {object} string "Failed to update source"
-// @Router /api/v1/domain/ [put]
+//
+//	@Summary		Update source.
+//	@Description	Update source information or params for update job.
+//	@Tags			domain
+//	@Accept			json
+//	@Produce		json
+//	@Security		ApiKeyAuth
+//	@Param			sourceID	path		int						true	"Source ID"
+//	@Param			req			body		pb.UpdateSourceRequest	true	"Update params"
+//	@Success		200			{object}	pb.Source				"Source updated"
+//	@Failure		400			{object}	string					"Failed to update source"
+//	@Router			/api/v1/domain/{id} [put]
 func (h *Handler) UpdateSource(c *fiber.Ctx) error {
 	var req pb.UpdateSourceRequest
 	if err := c.BodyParser(&req); err != nil {
@@ -28,12 +30,19 @@ func (h *Handler) UpdateSource(c *fiber.Ctx) error {
 	if !ok {
 		return errs.WrapErr(shared.ErrUnauthorized, "no user ID in context")
 	}
-	req.UserId = userID
 
-	_, err := h.domainService.UpdateSource(c.UserContext(), &req)
+	sourceID, err := c.ParamsInt(sourceIDParam)
+	if err != nil {
+		return errs.WrapErr(shared.ErrInvalidParams, err.Error())
+	}
+
+	ctx := pushUserID(c.UserContext(), userID)
+	req.SourceId = int64(sourceID)
+
+	resp, err := h.domainService.UpdateSource(ctx, &req)
 	if err != nil {
 		return errs.WrapErr(shared.ErrUpdateSource, err.Error())
 	}
 
-	return c.SendStatus(fiber.StatusNoContent)
+	return c.Status(fiber.StatusNoContent).JSON(resp)
 }
