# domain/internal/domain/handler/create_source.go
@@ -8,6 +8,6 @@ import (
 	"google.golang.org/grpc/status"
 )
 
-func (h *Handler) CreateSource(ctx context.Context, req *pb.CreateSourceRequest) (*pb.CreateSourceResponse, error) {
-	return &pb.CreateSourceResponse{}, status.Error(codes.Unimplemented, "")
+func (h *Handler) CreateSource(ctx context.Context, req *pb.Source) (*pb.Source, error) {
+	return req, status.Error(codes.Unimplemented, "")
 }
