# domain/internal/domain/handler/update_source.go
@@ -6,9 +6,14 @@ import (
 	"github.com/larek-tech/diploma/domain/internal/domain/pb"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
-	"google.golang.org/protobuf/types/known/emptypb"
 )
 
-func (h *Handler) UpdateSource(ctx context.Context, req *pb.UpdateSourceRequest) (*emptypb.Empty, error) {
-	return &emptypb.Empty{}, status.Error(codes.Unimplemented, "")
+func (h *Handler) UpdateSource(ctx context.Context, req *pb.UpdateSourceRequest) (*pb.Source, error) {
+	return &pb.Source{
+		Title:        req.GetTitle(),
+		Content:      req.GetContent(),
+		Typ:          0,
+		UpdateParams: req.GetUpdateParams(),
+		Credentials:  req.GetCredentials(),
+	}, status.Error(codes.Unimplemented, "")
 }
